[gd_scene load_steps=8 format=3 uid="uid://bt6pkbo3mdxgt"]

[ext_resource type="Theme" uid="uid://dt4b5okf4yefr" path="res://Themes/DefaultTheme.tres" id="1_bd402"]
[ext_resource type="Texture2D" uid="uid://d2427qhw4k0m6" path="res://icon.svg" id="1_cpc7k"]
[ext_resource type="Script" path="res://Scripts/SceneController.gd" id="1_t818r"]
[ext_resource type="Script" path="res://Scripts/TweenResource.gd" id="2_baxib"]
[ext_resource type="Script" path="res://Scripts/PanelDisabler.gd" id="4_fnh0k"]
[ext_resource type="Script" path="res://Scripts/SceneChanger.gd" id="4_jtq72"]

[sub_resource type="Resource" id="Resource_rbltn"]
script = ExtResource("2_baxib")
tweened_property = "position:x"
tween_from = 60.0
tween_to = 514.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bd402")
script = ExtResource("1_t818r")
tween_resources = Array[ExtResource("2_baxib")]([SubResource("Resource_rbltn")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Linear Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Linear Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Linear"
horizontal_alignment = 1

[node name="Linear Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Linear Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Quad Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Quad Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Quadratic"
horizontal_alignment = 1

[node name="Quad Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Quad Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Sine Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Sine Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Sine"
horizontal_alignment = 1

[node name="Sine Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Sine Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Cubic Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Cubic Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Cubic"
horizontal_alignment = 1

[node name="Cubic Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Cubic Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Back Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Back Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1

[node name="Back Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Back Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Quart Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Quart Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Quartic"
horizontal_alignment = 1

[node name="Quart Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Quart Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Elastic Panel" type="Panel" parent="VBoxContainer/GridContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Elastic Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Elastic"
horizontal_alignment = 1

[node name="Elastic Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Elastic Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Quint Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Quint Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Quintic"
horizontal_alignment = 1

[node name="Quint Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Quint Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Bounce Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Bounce Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Bounce"
horizontal_alignment = 1

[node name="Bounce Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Bounce Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Expo Panel" type="Panel" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_fnh0k")

[node name="Transition Name" type="Label" parent="VBoxContainer/GridContainer/Expo Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Exponential"
horizontal_alignment = 1

[node name="Expo Sprite" type="Sprite2D" parent="VBoxContainer/GridContainer/Expo Panel"]
unique_name_in_owner = true
position = Vector2(60, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cpc7k")

[node name="Settings Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Settings Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scene Name" type="Label" parent="VBoxContainer/Settings Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Simple Movement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time Settings" type="HBoxContainer" parent="VBoxContainer/Settings Panel/HBoxContainer"]
layout_mode = 2

[node name="Time Label" type="Label" parent="VBoxContainer/Settings Panel/HBoxContainer/Time Settings"]
layout_mode = 2
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time Spinbox" type="SpinBox" parent="VBoxContainer/Settings Panel/HBoxContainer/Time Settings"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
step = 0.1
value = 1.0
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="Time Slider" type="HSlider" parent="VBoxContainer/Settings Panel/HBoxContainer/Time Settings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="Cooldown Settings" type="HBoxContainer" parent="VBoxContainer/Settings Panel/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Settings Panel/HBoxContainer/Cooldown Settings"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Cooldown Label" type="Label" parent="VBoxContainer/Settings Panel/HBoxContainer/Cooldown Settings"]
layout_mode = 2
text = "Cooldown"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cooldown Spinbox" type="SpinBox" parent="VBoxContainer/Settings Panel/HBoxContainer/Cooldown Settings"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 0.5
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="Cooldown Slider" type="HSlider" parent="VBoxContainer/Settings Panel/HBoxContainer/Cooldown Settings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 5.0
step = 0.1
value = 0.5

[node name="EaseType Option" type="OptionButton" parent="VBoxContainer/Settings Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 2
popup/item_0/text = "Ease In"
popup/item_0/id = 0
popup/item_1/text = "Ease Out"
popup/item_1/id = 1
popup/item_2/text = "Ease In Out"
popup/item_2/id = 2
popup/item_3/text = "Ease Out In"
popup/item_3/id = 3

[node name="Scene Arrows" type="HBoxContainer" parent="VBoxContainer/Settings Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("4_jtq72")
next_scene = "2_Scaling"

[node name="PrevScene Button" type="Button" parent="VBoxContainer/Settings Panel/HBoxContainer/Scene Arrows"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<"

[node name="NextScene Button" type="Button" parent="VBoxContainer/Settings Panel/HBoxContainer/Scene Arrows"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"

[connection signal="value_changed" from="VBoxContainer/Settings Panel/HBoxContainer/Time Settings/Time Spinbox" to="." method="_on_time_changed"]
[connection signal="value_changed" from="VBoxContainer/Settings Panel/HBoxContainer/Time Settings/Time Slider" to="." method="_on_time_changed"]
[connection signal="value_changed" from="VBoxContainer/Settings Panel/HBoxContainer/Cooldown Settings/Cooldown Spinbox" to="." method="_on_cooldown_changed"]
[connection signal="value_changed" from="VBoxContainer/Settings Panel/HBoxContainer/Cooldown Settings/Cooldown Slider" to="." method="_on_cooldown_changed"]
[connection signal="item_selected" from="VBoxContainer/Settings Panel/HBoxContainer/EaseType Option" to="." method="_on_ease_type_option_item_selected"]
[connection signal="pressed" from="VBoxContainer/Settings Panel/HBoxContainer/Scene Arrows/PrevScene Button" to="VBoxContainer/Settings Panel/HBoxContainer/Scene Arrows" method="_on_prev_scene_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings Panel/HBoxContainer/Scene Arrows/NextScene Button" to="VBoxContainer/Settings Panel/HBoxContainer/Scene Arrows" method="_on_next_scene_button_pressed"]
